enable_hidden_dimensions is ded :(